logo align fixed

--- a/rk.css
+++ b/rk.css
@@ -1727,10 +1727,13 @@ textarea:focus {
 
 
 .logo {
-  max-width: 300px; /* Adjust the width as needed */
+  max-width: 300px; /* Adjust width */
   height: auto;
-  display:flex-start
+  display: block; /* Ensures it behaves as a block element */
+  margin-left: 0; /* Pushes it to the left */
+  padding-left: 0; /* Ensures no extra padding */
 }
+
 
 .social-icons img {
   width: 24px;
